load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":concatjs_packages.bzl", "CONCATJS_PACKAGES")
load(":toolchain.bzl", "configure_concatjs_toolchains")

filegroup(
    name = "package_contents",
    srcs = glob(["*"]),
    visibility = ["//:__pkg__"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

configure_concatjs_toolchains(
    platforms = CONCATJS_PACKAGES.platforms,
)

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:bzl",
    ],
)
